@@ -92,6 +92,7 @@ org/python/modules/_weakref/ProxyType.class
 org/python/modules/_weakref/ReferenceType.class
 org/python/modules/operator$PyAttrGetter.class
 org/python/modules/operator$PyItemGetter.class
+org/python/modules/operator$PyMethodCaller.class
 org/python/modules/posix/PyStatResult.class
 org/python/modules/random/PyRandom.class
 org/python/modules/thread/PyLocal.class
